[tool.poetry]
name = "plantdb"
version = "0.1.0"
description = "A minimal REST API serving JSON information from the Plant DB."
authors = ["Jonathan LEGRAND <jonathan.legrand@ens-lyon.fr>", "Peter Hanappe <peter@romi-project.eu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://docs.romi-project.eu/documentation/"
repository = "https://github.com/romi/plantdb"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
dirsync = "^2.2.5"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
imageio = "^2.14.1"
numpy = "^1.21.4"
Pillow = "^9.0.1"
toml = "^0.10.2"
appdirs = "^1.4.4"
Flask-Cors = "^3.0.10"
nose2 = {extras = ["coverage"], version = "^0.10.0"}
coverage = {extras = ["toml"], version = "^6.3"}

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
sphinx-copybutton = "^0.4.0"
sphinx-material = "^0.0.35"
myst-parser = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["plantdb"]
omit = ["*__init__.py", "tests/*"]

[tool.coverage.report]
omit = ["*__init__.py", "tests/*"]

[tool.poetry.scripts]
romi_scanner_rest_api = "plantdb.bin.romi_scanner_rest_api:run"
romi_fsdb_sync = "plantdb.bin.romi_fsdb_sync:run"
romi_import_file = "plantdb.bin.romi_import_file:run"
romi_import_folder = "plantdb.bin.romi_import_folder:run"