[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plantdb.server"
version = "0.14.1"
dependencies = [
    "bcrypt",
    "flask",
    "flask-cors",
    "flask-restful",
    "plantdb.commons",
    "requests",
    "toml",
]
description = """
Server-side component of the ROMI (Robotics for Microfarms) plant database system.
Provides a robust REST API server implementation for managing plant phenotyping data,
with features including:
- File system database management
- Data synchronization services
- Command-line tools for database management

Built for agricultural research facilities and robotics labs requiring reliable plant data management infrastructure.
"""
readme = "README.md"
requires-python = ">=3.8"
license = { name = "GPL-3.0-or-later", file = "LICENSE" }
authors = [
    { name = "Nabil Ait Taleb", email = "mohamednabil.aittaleb@sony.com" },
    { name = "Peter Hanappe", email = "peter.hanappe@sony.com" },
    { name = "Timothée Wintz", email = "timothee@timwin.fr" },
    { name = "Arthur Luciani", email = "arthur.luciani@ens-lyon.fr" },
]
maintainers = [
    { name = "Jonathan Legrand", email = "jonathan.legrand@ens-lyon.fr" }
]
keywords = [
    "Robotics for Microfarms",
    "ROMI",
    "Database",
    "REST API",
    "Plant Phenotyping",
    "Scientific Database",
    "Data Management",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: Database",
    "Topic :: System :: Networking",
    "Framework :: Flask",
    "Operating System :: OS Independent"
]

[project.scripts]
fsdb_rest_api = "plantdb.server.cli.fsdb_rest_api:main"

[project.urls]
Homepage = "https://romi-project.eu/"
Documentation = "https://docs.romi-project.eu/plant_imager/"
Repository = "https://github.com/romi/plantdb"
Issues = "https://github.com/romi/plantdb/issues"

[project.optional-dependencies]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "markdown-exec[ansi]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]
test = [
    "nose2[coverage]",
    "coverage[toml]",
    "networkx",
    "tifffile",
]