[build-system]
requires = ["setuptools >=75"]
build-backend = "setuptools.build_meta"

[project]
name = "plantdb.server"
version = "0.14.5"
dependencies = [
    "plantdb.commons",
    "bcrypt",
    "flask",
    "flask-cors",
    "flask-restful",
    "requests",
    "toml",
]
description = "Server-side component of the ROMI plant database system."
readme = "README.md"
requires-python = ">=3.8"
license = { 'text' = "LGPL-3.0-or-later" }   # to replace by "LGPL-3.0-or-later" only in next release, pending deprecation
authors = [
    { name = "Peter Hanappe", email = "peter.hanappe@sony.com" },
    { name = "Timothée Wintz", email = "timothee@timwin.fr" },
    { name = "Nabil Ait Taleb", email = "mohamednabil.aittaleb@sony.com" },
    { name = "Arthur Luciani", email = "arthur.luciani@ens-lyon.fr" },
]
maintainers = [
    { name = "Jonathan Legrand", email = "jonathan.legrand@ens-lyon.fr" }
]
keywords = [
    "Robotics for Microfarms",
    "ROMI",
    "Plant Phenotyping",
    "Scientific Database",
    "Data Management",
    "REST API",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: System :: Networking",
    "Framework :: Flask",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.scripts]
fsdb_rest_api = "plantdb.server.cli.fsdb_rest_api:main"

[project.urls]
homepage = "https://romi-project.eu/"
documentation = "https://docs.romi-project.eu/plant_imager/"
source = "https://github.com/romi/plantdb"
issues = "https://github.com/romi/plantdb/issues"

[project.optional-dependencies]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "markdown-exec[ansi]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]
test = [
    "nose2[coverage]",
    "coverage[toml]",
    "networkx",
    "tifffile",
]